# carbon

./: .gitignore  AGENTS.md  README.md  create_dataset.py  pyproject.toml  requirements-evo2.txt  requirements.txt
clustering/: README.md  (+5 more)
data/: README.md  download.py  find_nucleotide_data.py  imgpr_data_analysis.ipynb  pyproject.toml
data/coord-enrichment/: ENRICHMENT_STATS.md  README.md  enrich_pipeline.py  fetcher.py  watch_and_enrich.sh
data/dna_distillation/: README.md  generate_data.py
data/seqqa/: README.md  __init__.py  decontaminate.py  generate_data.py  grade_completions.py  process_completions.py
data/synth-data/: 01_gene_structure.py  02_regulatory_elements.py  03_functional_classification.py  04_chromatin_states.py  05_conservation.py  06_variants.py  07_expression_epigenetic.py  08_repetitive_elements.py  09_mirna_regulatory_rna.py  10_disease_clinical.py  README.md  annotate_all.py  common.py  describe.py  fetch_genes.py  report_cost.py  report_genes.py  report_pipeline.py  report_visualize.py  requirements.txt  summarize.py
evaluation/: README.md  basic_dna.py  cds_half_shuffle_eval.py  cds_half_shuffle_eval.slurm  char_eval.py  clinvar_vep_eval.py  clinvar_vep_eval.slurm  dart_eval_task1.py  dart_eval_task1.slurm  evo2_runtime.py  genome_niah_eval.py  kegg_dna_classifier_train.py  kegg_dna_classifier_train.slurm  launch_inspect.slurm  launch_inspect_api.slurm  launch_lighteval.slurm  lighteval_tasks.py  lighteval_tasks.txt  lighteval_tasks_bio.txt  lighteval_tasks_en.txt  mmlu_pro.py  mmlu_pro_biology.py  perturbation_tasks.py  perturbation_tasks_token.py  pyproject.toml  reversed_promoter_sequences_eval.slurm  run_clinvar_8gpus.slurm  run_dart_eval.slurm  run_sequence_recovery.slurm  sequence_recovery.py  sequence_recovery_eval.py  sequence_recovery_eval.slurm  submit_sequence_recovery_gen_len_sweep.sh  synonymous_codon_substitution_eval.slurm  tata_perturbation_eval.slurm  transformers_compat.py  vep_eval.py
evaluation/data_prep/: README.md  prep_brca1.py  prep_brca2.py  prep_traitgym.py
evaluation/lighteval_tasks/: bio.txt  en.txt  tasks.py
evaluation/scripts/: _irt_2pl.py  benchmark_evo2_serving.py  benchmark_sequence_recovery_gen_len.py  fit_irt.py  plot_difficulty.py  plot_difficulty_irt.py  plot_pair.py  plot_pair_irt.py  plot_seqqa_checkpoint_series.py  plot_seqqa_difficulty.py  plot_seqqa_pair.py  plot_seqqa_pipeline_comparison.py  plot_sequence_recovery_sweep.py  push_irt_outputs.py  run_serving_benchmarks.py
evaluation/serving/: benchmark_generator_transformers_serving.py  run_serving_benchmarks.py
evaluation/slurm/: README.md  run_seq_recovery_eval.sbatch  run_synonymous_codon_eval.sbatch  run_synonymous_codon_v2_eval.sbatch  run_tata_perturbation_eval.sbatch  run_tata_v2_eval.sbatch
evaluation/slurm/carbon-3B/: clinvar.sbatch  genome_niah.sbatch  perturbation_tasks.sbatch  perturbation_tasks_token.sbatch  sequence_recovery.sbatch  vep_brca.sbatch  vep_brca2.sbatch  vep_traitgym.sbatch
evaluation/slurm/carbon-500M/: clinvar.sbatch  genome_niah.sbatch  perturbation_tasks.sbatch  perturbation_tasks_token.sbatch  sequence_recovery.sbatch  vep_brca2.sbatch  vep_traitgym.sbatch
evaluation/slurm/carbon-8B/: clinvar.sbatch  genome_niah.sbatch  perturbation_tasks.sbatch  perturbation_tasks_token.sbatch  sequence_recovery.sbatch  vep_brca2.sbatch  vep_traitgym.sbatch
evaluation/slurm/evo2-1b/: clinvar.sbatch  genome_niah.sbatch  perturbation_tasks.sbatch  perturbation_tasks_token.sbatch  sequence_recovery.sbatch  vep_brca.sbatch  vep_brca2.sbatch  vep_traitgym.sbatch
evaluation/slurm/evo2-20b/: clinvar.sbatch  genome_niah.sbatch  perturbation_tasks.sbatch  perturbation_tasks_token.sbatch  sequence_recovery.sbatch  vep_brca2.sbatch  vep_traitgym.sbatch
evaluation/slurm/evo2-40b/: clinvar.sbatch  genome_niah.sbatch  perturbation_tasks.sbatch  perturbation_tasks_token.sbatch  sequence_recovery.sbatch  vep_brca2.sbatch  vep_traitgym.sbatch
evaluation/slurm/evo2-7b/: clinvar.sbatch  genome_niah.sbatch  perturbation_tasks.sbatch  perturbation_tasks_token.sbatch  sequence_recovery.sbatch  vep_brca.sbatch  vep_brca2.sbatch  vep_traitgym.sbatch
evaluation/slurm/generator-v2-1.2b/: clinvar.sbatch  genome_niah.sbatch  perturbation_tasks.sbatch  perturbation_tasks_token.sbatch  sequence_recovery.sbatch  vep_brca2.sbatch  vep_traitgym.sbatch
evaluation/slurm/generator-v2-3b/: clinvar.sbatch  genome_niah.sbatch  perturbation_tasks.sbatch  perturbation_tasks_token.sbatch  sequence_recovery.sbatch  vep_brca.sbatch  vep_brca2.sbatch  vep_traitgym.sbatch
evaluation/slurm/reproduce/: bundle_carbon_clinvar.sbatch  bundle_carbon_clinvar_48k.sbatch  bundle_evo2_brca_traitgym.sbatch  bundle_evo2_clinvar.sbatch  bundle_evo2_clinvar_48k.sbatch  bundle_evo2_sr.sbatch  bundle_gen_clinvar.sbatch  bundle_gen_clinvar_48k.sbatch  bundle_hf_brca_traitgym.sbatch  bundle_hf_sr.sbatch  bundle_perturbation_all.sbatch
evaluation/slurm/reproduce/results/carbon-3B/brca1/: carbon-3B-hybrid-loss-1T-mix2-v1_bfloat16.json  (+1 more)
evaluation/tests/: test_sequence_recovery_eval.py
(+99 files in other folders)
