[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "carbon-evals"
version = "0.0.0"
description = "Dependencies for Carbon evaluation scripts"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
  "accelerate",
  "datasets",
  "inspect-evals",
  "lighteval @ git+https://github.com/huggingface/lighteval.git@33acf35f02c41d234c7df5cbdf1fd3e9d33ecd76",
  "more-itertools", # Needed for lighteval
  "pandas",
  "polars",
  "pyarrow",
  "pyfaidx",
  "scikit-learn",
  "scipy",
  "torch==2.10.0+cu129; platform_system == 'Linux' and platform_machine == 'x86_64'",
  "vllm==0.17.1",
  "google-genai>=1.56.0",
  "matplotlib"
]

[project.optional-dependencies]
evo2 = [
  "evo2",
  "pyyaml",
]

[tool.setuptools]
packages = []

[tool.uv.sources]
torch = [
  { index = "pytorch-cu129", marker = "platform_system == 'Linux' and platform_machine == 'x86_64'" },
]

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true
