[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "carbon-evals"
version = "0.0.0"
description = "Dependencies for Carbon evaluation scripts"
requires-python = ">=3.12,<3.13"
readme = "README.md"
dependencies = [
  "accelerate",
  "datasets",
  "inspect-evals",
  "lighteval @ git+https://github.com/huggingface/lighteval.git@34889df34655caac4e0092ed040f2bd4af837447",
  "more-itertools", # Needed for lighteval
  "pandas",
  "polars",
  "pyarrow",
  "pyfaidx",
  "pyro-ppl",
  "ray", # Needed for lighteval vllm backend
  "scikit-learn",
  "scipy",
  "torch==2.10.0+cu129; platform_system == 'Linux' and platform_machine == 'x86_64'",
  "transformers>=5.5.3",
  "vllm>=0.19.0",
  "google-genai>=1.56.0",
  "matplotlib",
  "biopython>=1.83",
]

[project.optional-dependencies]
evo2 = [
  "evo2",
  "pyyaml",
]

[tool.setuptools]
packages = []

[tool.uv]
# vLLM 0.19.0 still constrains transformers to <5, but the eval stack targets Transformers 5.x.
override-dependencies = ["transformers>=5.5.3"]
environments = [
  "sys_platform == 'linux' and platform_machine == 'x86_64' and python_full_version >= '3.12' and python_full_version < '3.13'",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu129", marker = "platform_system == 'Linux' and platform_machine == 'x86_64'" },
]

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true
